--- a/internship.html
+++ b/internship.html
@@ -41,12 +41,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.jobvite.com/the-climate-corporation/job/oKPpbfwT'>The Climate Corporation Careers - Intern: Data Analyst (Summer 2020)</a></h5> 
+<h5><a href='https://www.greatinsurancejobs.com/job/6409294/fire-investigative-intern/?TrackID=97736'>Fire Investigative Intern job with Travelers Insurance | 6409294</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/the-climate-corporation/job/oKPpbfwT'>The Climate Corporation Careers - Intern: Data Analyst (Summer 2020)</a></h5> 
+<p><span class="badge badge-light">San Francisco, California  Seattle, Washington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/the-climate-corporation/job/oUCpbfwQ'>The Climate Corporation Careers - Intern: Communications (Summer 2020)</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">St. Louis, Missouri</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Visa/743999698434416-intern-vbs-new-payment-flows-mba'>Visa Intern, VBS New Payment Flows - MBA | SmartRecruiters</a></h5> 
@@ -97,7 +101,7 @@
 <p><span class="badge badge-light">Carmel, Indiana  Carmel, Indiana</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FireEyeInc1/743999698427064-threat-intelligence-analyst-internships-summer-2020'>FireEye, Inc. Threat Intelligence Analyst Internships - Summer 2020 | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FireEyeInc1/743999698427064-threat-intelligence-analyst-internships-summer-2020'>FireEye, Inc. Threat Intelligence Analyst Internships - Summer 2020 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Reston, VA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -261,7 +265,7 @@
 <p><span class="badge badge-light">Chicago, IL  Chicago</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careercenter.bluefishjobs.com/jobs/12865587/student-wellness-and-recreation-facility-operations-internship-now-hiring-spring-2020'>Student Wellness and Recreation Facility Operations Internship; Now Hiring SPRING 2020 , Employment | NIRSA</a></h5> 
+<h5><a href='https://careercenter.bluefishjobs.com/jobs/12865587/student-wellness-and-recreation-facility-operations-internship-now-hiring-spring-2020'>Student Wellness and Recreation Facility Operations Internship; Now Hiring SPRING 2020 , Employment | NIRSA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -289,7 +293,7 @@
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/innerworkings/job/omCcbfw5'>InnerWorkings Careers - Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/innerworkings/job/omCcbfw5'>InnerWorkings Careers - Intern</a></h5> 
 <p><span class="badge badge-light">Mexico City, Mexico</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -343,7 +347,7 @@
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698357157-internship-in-online-marketing'>Bosch Group Internship in Online Marketing | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698357157-internship-in-online-marketing'>Bosch Group Internship in Online Marketing | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -371,11 +375,11 @@
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698352901-internship-sales-project-management-engineer-automotive'>Bosch Group Internship - Sales & Project Management Engineer Automotive | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698352901-internship-sales-project-management-engineer-automotive'>Bosch Group Internship - Sales & Project Management Engineer Automotive | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Torino TO, Italy</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lovepopcards/a7ecc203-3dc2-4839-a3a8-e9b5254d7ef5'>Lovepop - Design Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/lovepopcards/a7ecc203-3dc2-4839-a3a8-e9b5254d7ef5'>Lovepop - Design Intern</a></h5> 
 <p><span class="badge badge-light">Boston, MA  Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -391,7 +395,7 @@
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698350098-social-media-internship'>Seeka Technology Social Media Internship | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698350098-social-media-internship'>Seeka Technology Social Media Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -446,10 +450,6 @@
 <h5><a href='https://jobs.jobvite.com/eidosmontreal/job/oxOpbfwF'>Eidos Montr?al Careers - Stagiaire en Recherche Utilisateurs / User Research Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=oMnUafwX&__jvst=Employee&__jvsd=sJC77gwk&__jvsc=Twitter&bid=nfESmMwo'>Schneider Electric NAM Careers - Service Bureau Engineer Intern - Summer 2020</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-28</p>
 <hr/>
 
 
